# python-learning

./: .gitignore  README.md  args.py  arithmetic.py  bool.py  complex-numbers.py  dictionaries.py  file-io-write.py  file-io.py  file_io_dirs.py  functions.py  logical-operators.py  main.py  numbers.py  pyproject.toml  pyrightconfig.json  requirements.txt  scopes.py  statements.py  string-manipulation.py  string_manipulation.py  tuples.py  types.py
application/: date_and_time.py  dictionaries.py  doc_scripts.py  file_io_dirs.py  lists.py  memory.py  print.py  scopes.py  ternary-operator.py
files/: file2.txt
string_generator/: string_generator_app.py
topics/: args.py  arithmetic.py  bool.py  classes.py  constants.py  date_and_time.py  dictionaries.py  doc_scripts.py  file_io_dirs.py  file_io_read.py  functions.py  input.py  lists.py  memory.py  pip_examples.py  scopes.py  string_manipulation.py  types.py  virtual_env.py
topics/files/: file.txt
